@@ -1,3 +1,9 @@
+2009-05-08  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/40062
+	* tree-scalar-evolution.c (follow_ssa_edge_in_condition_phi):
+	Avoid exponential behavior.
+
 2009-05-07  Janis Johnson  <janis187@us.ibm.com>
 
 	PR middle-end/39986
